--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -2,19 +2,24 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
+        <DefineConstants>FABLE_COMPILER</DefineConstants>
     </PropertyGroup>
     <ItemGroup>
-        <Compile Include="..\Shared\Shared.fs" />
-        <Compile Include="Client.fs" />
+        <Compile Include="Index.fs" />
+        <Compile Include="App.fs" />
+    </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\Shared\Shared.fsproj" />
     </ItemGroup>
     <ItemGroup>
       <PackageReference Include="Fable.Compiler" Version="1.3.18" />
-      <PackageReference Include="Fable.Core" Version="2.0.3" />
-      <PackageReference Include="Fable.Elmish" Version="2.0.3" />
-      <PackageReference Include="Fable.Elmish.Debugger" Version="2.0.3" />
-      <PackageReference Include="Fable.Elmish.HMR" Version="3.2.0" />
-      <PackageReference Include="Fable.Elmish.React" Version="2.2.0" />
-      <PackageReference Include="Fable.FontAwesome.Free" Version="1.0.0" />
-      <PackageReference Include="Fulma" Version="1.1.0" />
+      <PackageReference Include="Fable.Core" Version="3.1.5" />
+      <PackageReference Include="Fable.Elmish" Version="3.1.0" />
+      <PackageReference Include="Fable.Elmish.Debugger" Version="3.2.0" />
+      <PackageReference Include="Fable.Elmish.HMR" Version="4.0.1" />
+      <PackageReference Include="Fable.Elmish.React" Version="3.0.1" />
+      <PackageReference Include="Fable.FontAwesome.Free" Version="2.1.0" />
+      <PackageReference Include="Fulma" Version="2.10.0" />
+      <PackageReference Include="Thoth.Fetch" Version="2.0.0" />
     </ItemGroup>
 </Project>
